--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     "sourceMap": true /* Create source map files for emitted JavaScript files. */,
-    "outDir": "out" /* Specify an output folder for all emitted files. */,
+    "outDir": "lib" /* Specify an output folder for all emitted files. */,
 
     /* Interop Constraints */
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
@@ -46,5 +46,6 @@
 
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["node_modules", "lib", "**/__plays__", "**/__tests__"]
 }
