预览页面脚本改为相对路径

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest:watch": "jest --watch",
     "prepack": "rimraf ./lib && tsc",
     "vite:dev": "vite",
-    "vite:dist": "tsc && vite build"
+    "vite:dist": "tsc && vite --base ./ build"
   },
   "keywords": [],
   "author": "",
